* Fixes issues upgrading the state, which could cause the autodetect process to 
crash. {ml-pull}140[#140] (issue: {ml-issue}136[#136])

//=== Regressions

//=== Known Issues

== Elasticsearch version 6.3.0

//=== Breaking Changes

//=== Deprecations

//=== New Features

=== Enhancements

* Synchronize long and short tests for periodicity {ml-pull}62[#62]
* Improvements to trend modelling and periodicity testing for forecasting {ml-pull}7[#7] (issue: {ml-issue}5[#5])

=== Bug Fixes

* By-fields should respect model_plot_config.terms {ml-pull}86[#86] (issue: {issue}30004[#30004])
* Function description for population lat_long results should be lat_long instead of mean {ml-pull}81[#81] (issue: {ml-issue}80[#80])
* Fix error causing us to overestimate effective history length {ml-pull}66[#66] (issue: {ml-issue}57[#57])
* Clearing JSON memory allocators {ml-pull}30[#30] (issue: {ml-issue}26[#26])
* Fix sparse data edge cases for periodicity testing {ml-pull}28[#28] (issue: {ml-issue}20[#20])
* Impose an absolute cutoff on the minimum variance {ml-pull}8[#8] (issue: {ml-issue}488[#488])
* Check accesses in bounds when clearing recycled models {ml-pull}79[#79] (issue: {ml-issue}76[#76])
* Set forecast progress to 100% and status finished in the case of insufficient history (data) {ml-pull}44[#44]
* Add control message to start background persistence {ml-pull}19[#19]
* Fail start up if state is missing {ml-pull}4[#4]
* Do not log incorrect model memory limit {ml-pull}3[#3]
* Fix background persistence - in 6.1 and 6.2 background persisted models were only visible after jobs were closed
* Fix anomaly detection for buckets with fewer than two values when using the `varp` function
* Fix typical values and model plot bounds when using the `multivariate_by_fields` option
* Fix typical values, forecast confidence intervals and model plot bounds for models with multiple modes


//=== Regressions

//=== Known Issues