@@ -1010,6 +1010,7 @@ void CEventRatePopulationModel::fill(model_t::EFeature feature,
         model->seasonalWeight(maths::DEFAULT_SEASONAL_CONFIDENCE_INTERVAL, time)));
     double value{model_t::offsetCountToZero(
         feature, static_cast<double>(CDataGatherer::extractData(*data).s_Count))};
+    bool skipAnomalyModelUpdate = this->shouldIgnoreSample(feature, pid, cid, time);
 
     params.s_Feature = feature;
     params.s_Model = model;
@@ -1028,7 +1029,8 @@ void CEventRatePopulationModel::fill(model_t::EFeature feature,
         .tag(pid) // new line
         .addCalculation(model_t::probabilityCalculation(feature))
         .addBucketEmpty({false})
-        .addWeights(weight);
+        .addWeights(weight)
+        .skipAnomalyModelUpdate(skipAnomalyModelUpdate);
 }
 
 ////////// CEventRatePopulationModel::SBucketStats Implementation //////////
