@@ -161,6 +161,10 @@ crash. {ml-pull}140[#140] (issue: {ml-issue}136[#136])
 * Fix typical values, forecast confidence intervals and model plot bounds for models with multiple modes
 
 
+Rules that trigger the `skip_model_update` action should also apply to the anomaly model.
+This fixes an issue where anomaly scores of results that triggered the rule would decrease
+if they occurred frequently. (See {ml-pull}222[#222].)
+
 //=== Regressions
 
 //=== Known Issues
